--- a/views/error.ejs
+++ b/views/error.ejs
@@ -15,7 +15,7 @@
   class = "w-full flex flex-col relative grow min-h-[120vh]">
       <div 
         id = "contentWrapper"
-        class = "pb-[6.5rem]">
+        class = "ContentWrapper">
           <div class = "w-full mb-[135px]">
             <%- include("partials/header") %>
             <%- include("partials/MobileMenu") %>
