--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,7 +14,7 @@
   class = "w-full flex flex-col relative grow min-h-[120vh] font-['DecoTech'] text-[#f2e796]">
       <div 
         id = "contentWrapper"
-        class = "pb-[6.5rem]">
+        class = "ContentWrapper">
           <div class = "w-full mb-[50px] sm:mb-[100px]">
             <%- include("partials/header") %>
             <%- include("partials/MobileMenu") %>
