--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -118,6 +118,11 @@
 								<a href ="/user/<%= user.id%>/update">Edit profile</a>
 							</div>
 							<div class ="hover:underline">
+								<a href ="/user/<%= user.id%>/changepassword"
+									<%= user.id%>/update">Change password
+								</a>
+							</div>
+							<div class ="hover:underline">
 								<a href ="/logout">Log Out</a>
 							</div>
 					</div>
