--- a/views/register.ejs
+++ b/views/register.ejs
@@ -14,7 +14,7 @@
   class = "w-full flex flex-col relative grow min-h-[120vh] font-['DecoTech']">
       <div 
         id = "contentWrapper"
-        class = "pb-[6.5rem]">
+        class = "ContentWrapper">
           <div class = "w-full mb-[120px]">
             <%- include("partials/header") %>
             <%- include("partials/MobileMenu") %>
