--- a/views/static/about.ejs
+++ b/views/static/about.ejs
@@ -4,7 +4,8 @@
   <meta charset="utf-8">
   <title>Henry's Speakeasy</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <link rel ="stylesheet" href='stylesheets/style.css'> 
+  <link rel ="stylesheet" href='/stylesheets/style.css'> 
+  <link rel ="stylesheet" href='/stylesheets/tailwind.css'> 
   <link rel="icon" type="image/x-icon" href="/assets/images/SpeakeasyFavicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
 </head>
@@ -14,10 +15,10 @@
   class = "w-full flex flex-col relative grow min-h-[120vh]">
       <div 
         id = "contentWrapper"
-        class = "pb-[6.5rem]">
+        class = "ContentWrapper">
           <div class = "w-full mb-[75px] sm:mb-[135px]">
-            <%- include("partials/header") %>
-            <%- include("partials/MobileMenu") %>
+            <%- include("../partials/header") %>
+            <%- include("../partials/MobileMenu") %>
           </div>
           <div class = "w-11/12 mx-auto sm:w-8/12 lg:w-5/12 ">
           <% if(typeof error != 'undefined' && typeof error.errors != 'undefined') {%> 
@@ -47,7 +48,7 @@
           </div>
           </div>
       </div>
-      <%- include('partials/footer') %>
+      <%- include('../partials/footer') %>
   </div>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
 </body>
