--- a/views/user/passwordForm.ejs
+++ b/views/user/passwordForm.ejs
@@ -4,7 +4,8 @@
   <meta charset="utf-8">
   <title>Henry's Speakeasy</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <link rel ="stylesheet" href='stylesheets/style.css'> 
+  <link rel ="stylesheet" href='/stylesheets/style.css'> 
+  <link rel ="stylesheet" href='/stylesheets/tailwind.css'> 
   <link rel="icon" type="image/x-icon" href="/assets/images/SpeakeasyFavicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
 </head>
@@ -16,8 +17,8 @@
         id = "contentWrapper"
         class = "ContentWrapper">
           <div class = "w-full mb-[120px]">
-            <%- include("partials/header") %>
-            <%- include("partials/MobileMenu") %>
+            <%- include("../partials/header") %>
+            <%- include("../partials/MobileMenu") %>
           </div>
           <div class = "text-center">
              <h1 class = "font-['DecoTech'] text-5xl text-black mt-[100px] uppercase"><%= title %></h1>
@@ -25,24 +26,15 @@
               <% if(typeof error != 'undefined' && error.length > 0) {%> 
                   <div 
                     id="ErrorDiv"
-                    class = "my-[50px] text-black w-full">
+                    class = "my-[10px] text-black w-full bg-[rgba(255, 255, 255, 0.75)] p-5 text-3xl">
                     <h2 class = "font-bold">Error: </h2>
                     <ul>
                     <% error.forEach(err => { %> 
-                        <li><%= err %></li>
+                        <li class = ""><span><%= err.param %>: </span><%= err.msg %></li>
                     <%}) %> 
                     </ul>
                   </div>
               <%}%>
-              <% if(typeof message != 'undefined' && message != "") {%> 
-                  <div 
-                    id="ErrorMessageDiv"
-                    class = "my-[50px] text-black w-full text-center bg-[rgba(255,255,255,0.3)] p-3">
-                    <h2 class = "font-bold text-3xl">Error: </h2>
-                    <p class = "text-3xl"><%= message%></p>
-                  </div>
-              <%}%>
-
               <div>
                   <img 
                     src = "<%= UpperFrame %>" 
@@ -50,7 +42,7 @@
                      class = "w-full h-auto select-none" 
                      />
                   <form
-                    action="/login" 
+                    action="" 
                     method="POST"
                     class="[&>div>label]:text-black [&>div>label]:uppercase [&>div>label]:font-bold [&>div]:grid [&>div>input]:rounded-lg 
                     [&>div]:w-full [&>div]:my-[10px] [&>div>input]:pl-3 [&>div>input]:bg-[rgba(0,0,0,0)] 
@@ -59,19 +51,18 @@
                     [&>div>input]:placeholder:text-base" 
                     id = "form">
                     <div>
-                        <label for = "username">Username</label>
+                        <label for = "oldPassword">Old password</label>
                         <input 
-                            name = "username" 
-                            id = "nameInput"
-                            type = "text"
-                            placeholder = "Type your username here" 
-                            required = "true"
+                            name = "oldPassword" 
+                            id = "oldPasswordInput"
+                            type = "password"
+                            placeholder = "Type your old password here" 
                             class = ""
-                            value = "<%= typeof username != 'undefined' ? username : null %>"
+                            value = "<%= typeof password != 'undefined' ? password : null %>"
                             />
                     </div>
                     <div>
-                        <label for = "password">password</label>
+                        <label for = "password">New password</label>
                         <input 
                             name = "password" 
                             id = "passwordInput"
@@ -82,16 +73,20 @@
                             value = "<%= typeof password != 'undefined' ? password : null %>"
                             />
                     </div>
-                    <%- include('partials/FormButtons')%>
-                    <hr class = "my-[25px] h-[2px] border-[2px]">
-                    <h2 class = "my-10 text-center text-lg">Don't have an account with us?</h2>
-                    <button 
-                        type = "button"
-                        onClick = "location.href='/register'"
-                        class = "rounded-full p-[10px] active:translate-x-[5px] active:translate-y-[5px] cursor-pointer
-                        border-white border-2 text-center w-[150px] select-none text-black mx-auto
-                        hover:bg-[#d48518] bg-[#e48f1a]"
-                    >Create Account</button>
+                    <div>
+                        <label for = "confirm_password">Confirm your new password</label>
+                        <input 
+                            name = "confirm_password" 
+                            id = "confirm_passwordInput"
+                            type = "password"
+                            placeholder = "Re-type your new password here to confirm" 
+                            required = "true"
+                            class = ""
+                            value = "<%= typeof confirm_password != 'undefined' ? confirm_password : null %>"
+                            />
+                    </div>
+                    <%- include('../partials/FormButtons')%>
+
                   </form>
                   <img 
                     src = "<%= BottomFrame %>" 
@@ -102,7 +97,8 @@
             </div>
 		</div>
       </div>
-      <%- include('partials/footer') %>
+      <%- include('../partials/footer') %>
+      <%- include('../partials/authentication/validatePasswordChange')%>
   </div>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
 </body>
