--- a/views/initiationForm-current.ejs
+++ b/views/initiationForm-current.ejs
@@ -21,7 +21,7 @@
   class = "w-full flex flex-col relative grow min-h-[120vh]">
       <div 
         id = "contentWrapper"
-        class = "pb-[6.5rem] ">
+        class = "ContentWrapper">
           <div class = "w-full mb-[25px]">
             <%- include("partials/header") %>
             <%- include("partials/MobileMenu") %>
