--- a/views/initiationForm.ejs
+++ b/views/initiationForm.ejs
@@ -21,7 +21,7 @@
   class = "w-full flex flex-col relative grow min-h-[120vh] bg-[url('<%= BackgroundURL %>')] bg-repeat h-full">
       <div 
         id = "contentWrapper"
-        class = "pb-[6.5rem]">
+        class = "ContentWrapper">
               <div class = "w-full mb-[25px]">
                 <%- include("partials/header") %>
                 <%- include("partials/MobileMenu") %>
