--- a/views/partials/MobileMenu.ejs
+++ b/views/partials/MobileMenu.ejs
@@ -1,15 +1,55 @@
-<div id = "MobileMenu" class = "w-[300px] bg-[url('<%= MobileMenuBackground%>')] h-full text-center text-black z-50 fixed 
+<div id = "MobileMenu" class = "w-[280px] bg-[url('<%= MobileMenuBackground%>')] h-full text-center text-black z-50 fixed 
 	right-0 top-0 font-bold closed-menu [&>div]:select-none bg-[length:100%_100%] font=['MarketDeco']
 	text-2xl">
+
+	<% if(user) {%>
+	
+	<% var ProfilePicStyle = "select-none w-[200px] h-[200px] object-cover rounded-full mx-auto z-10" %>
+	<div class = "m-auto overflow-hidden relative my-[20px]" >
+		<h1 onclick ="location.href='/user/<%=user.id%>'">
+			Welcome, 
+			<span class = "underline cursor-pointer">
+				<%= user.username%>
+			</span>.
+		</h1>
+		<% if(typeof user.profile_pic.contentType != 'undefined') { %>
+			<img
+				src="data:<%= user.profile_pic.contentType %>;base64,<%= user.profile_pic.data.toString('base64') %>"
+				class = "<%= ProfilePicStyle %>"
+			/>
+		<% } %>
+	</div>
+	<% } %>
 	<div 
 		class = "mt-10 cursor-pointer hover:underline hover:text-gray-500 active:text-3xl" 
 		onclick="location.href='/'">Home</div>
+	<% if(user) {%>
+	<div
+		class = "my-5 cursor-pointer hover:underline hover:text-gray-500 active:text-3xl"
+		onclick="location.href='/user/<%=user.id%>'">Your profile</div>
+	<div
+		class = "my-5 cursor-pointer hover:underline hover:text-gray-500 active:text-3xl"
+		onclick="location.href='/user/:id/changepassword'">Change password
+	</div>
+	<% } %>
 	<div
 		class = "my-5 cursor-pointer hover:underline hover:text-gray-500 active:text-3xl"
 		onclick="location.href='/users'">Members</div>
 	<div 
 		class = "my-5 cursor-pointer hover:underline hover:text-gray-500 active:text-3xl"
 		onclick="location.href='/contact'">Contact</div>
+	<% if(user) {%>
+	<div 
+		class = "my-5 cursor-pointer hover:underline hover:text-gray-500 active:text-3xl"
+		onclick="location.href='/logout'">Log out</div>
+	<% } else { %>
+	<div 
+		class = "my-5 cursor-pointer hover:underline hover:text-gray-500 active:text-3xl"
+		onclick="location.href='/login'">Log in</div>
+	<div
+		class = "my-5 cursor-pointer hover:underline hover:text-gray-500 active:text-3xl"
+		onclick="location.href='/register'">Create an account</div>
+	<% } %>
 	<div 
 		class = "my-5 cursor-pointer hover:underline hover:text-gray-500 active:text-3xl"
 		onclick="CloseActorMenu">Close Menu</div>
