--- a/views/partials/authentication/validatePasswordChange.ejs
+++ b/views/partials/authentication/validatePasswordChange.ejs
@@ -1,9 +1,7 @@
-<script type="text/javascript" src="../../script/checkEmail.js"></script>
+<script type="text/javascript" src="/script/checkEmail.js"></script>
 <script>
         const FormElement = document.getElementById('form'); 
-        const EmailElement = document.getElementById('emailInput');
         const ContainerElement = document.getElementById('container'); 
-        const UsernameElement = document.getElementById('nameInput'); 
         const PasswordInput = document.getElementById('passwordInput');
         const ConfirmPasswordInput = document.getElementById('confirm_passwordInput'); 
 
@@ -11,30 +9,15 @@
             event.preventDefault(); 
             var isValid = true; 
             var errorMessage = "Error: <br />"; 
-            <% if(typeof existingUsers != "undefined" && existingUsers.length > 0) { %> 
-            <% existingUsers.forEach(person => { %> 
-                if(UsernameElement.value == '<%= person.username %>'){
-                    errorMessage += "The username you typed already exists. Please, try another one. <br />"
-                    isValid = false; 
-                }
-                if(EmailElement.value == '<%= person.email %>'){
-                    errorMessage += "The email you typed already exists. Please, try another one. <br />"
-                    isValid = false; 
-                }
-            
-            <%})%>
-            <%}%>
 
-            if(!checkEmail(EmailElement.value)){
-                errorMessage += "The format of your email is incorrect. It must follow this example: user@email.com <br />"
-                isValid=false;
-            }
             if(PasswordInput.value.trim() != ConfirmPasswordInput.value.trim()){
                 errorMessage += "Your confirmation password must match your password <br />"
                 isValid = false; 
             }
             if(isValid){
-                form.submit(); 
+                //ShowSuccessMessage("You successfully changed your password.")
+                //setTimeout(()=>{form.submit()}, 4000)
+                form.submit();
             }
             else{
                 ShowErrorMessage(errorMessage)
@@ -57,4 +40,21 @@
         }, 8000)
             
         }
+
+        function ShowSuccessMessage(message){
+        const MessageDiv = document.createElement('div');
+        MessageDiv.innerHTML = message; 
+        MessageDiv.classList.add("SuccessMessage"); 
+        ContainerElement.appendChild(MessageDiv); 
+            
+        setTimeout(()=>{
+            MessageDiv.classList.add("SuccessMessageFadeIn");
+        }, 1)
+        setTimeout(()=>{ContainerElement.removeChild(MessageDiv)}, 4000)
+        setTimeout(()=>{
+            MessageDiv.classList.remove("SuccessMessageFadeIn"); 
+            MessageDiv.classList.add("SuccessMessageFadeOut"); 
+        }, 2000)        
+        }
+
 </script>
