--- a/views/user/profilePicDisplay.ejs
+++ b/views/user/profilePicDisplay.ejs
@@ -1,6 +1,6 @@
-<% var ProfilePicStyle = "select-none w-full  object-cover rounded-full w-[350px] h-[350px] mx-auto" %>
+<% var ProfilePicStyle = "select-none w-[270px] h-[270px] object-cover rounded-full mx-auto" %>
 <div 
-class = " m-auto overflow-hidden relative"
+class = "m-auto overflow-hidden relative"
 id = "AvatarField">
 	<% if(user && (user.member || userDetail._id == user.id)) {%>
 		<% if(typeof userDetail.profile_pic != 'undefined' && typeof userDetail.profile_pic.data != 'undefined') {%>
