--- a/views/partials/authentication/validatePasswordChange.ejs
+++ b/views/partials/authentication/validatePasswordChange.ejs
@@ -1,9 +1,12 @@
 <script type="text/javascript" src="/script/checkEmail.js"></script>
+<script type="text/javascript" src="/script/passwordChangeScript.js"></script>
 <script>
         const FormElement = document.getElementById('form'); 
-        const ContainerElement = document.getElementById('container'); 
+        var ContainerElement = document.getElementById('container'); 
         const PasswordInput = document.getElementById('passwordInput');
         const ConfirmPasswordInput = document.getElementById('confirm_passwordInput'); 
+        
+        ShowSuccessMessage("You successfully changed your password.")
 
         form.addEventListener('submit', (event) =>{
             event.preventDefault(); 
@@ -15,8 +18,6 @@
                 isValid = false; 
             }
             if(isValid){
-                //ShowSuccessMessage("You successfully changed your password.")
-                //setTimeout(()=>{form.submit()}, 4000)
                 form.submit();
             }
             else{
@@ -40,21 +41,4 @@
         }, 8000)
             
         }
-
-        function ShowSuccessMessage(message){
-        const MessageDiv = document.createElement('div');
-        MessageDiv.innerHTML = message; 
-        MessageDiv.classList.add("SuccessMessage"); 
-        ContainerElement.appendChild(MessageDiv); 
-            
-        setTimeout(()=>{
-            MessageDiv.classList.add("SuccessMessageFadeIn");
-        }, 1)
-        setTimeout(()=>{ContainerElement.removeChild(MessageDiv)}, 4000)
-        setTimeout(()=>{
-            MessageDiv.classList.remove("SuccessMessageFadeIn"); 
-            MessageDiv.classList.add("SuccessMessageFadeOut"); 
-        }, 2000)        
-        }
-
 </script>
