--- a/views/user/favoriteDrink.ejs
+++ b/views/user/favoriteDrink.ejs
@@ -19,14 +19,14 @@
 				id = "DrinksInput"
 				type = "text"
 				placeholder = "Enter your favorite drinks"
-				class = "inline-block rounded-lg bg-[rgba(0,0,0,0)] text-black border-white border-[1px] 
-            pl-3 min-w-[80%]"
+				class = "block min-[360px]:inline-block mx-auto min-[360px]:min-w-[70%] rounded-lg bg-[rgba(0,0,0,0)] text-black border-white border-[1px] 
+				pl-3  w-[90%]"
             />
 			<div
 				id="AddDrinksButton"
-				class = "inline-block text-2xl rounded-full px-1 active:translate-x-[5px] active:translate-y-[5px] cursor-pointer
+				class = "block min-[360px]:inline-block text-2xl rounded-full px-1 active:translate-x-[5px] active:translate-y-[5px] cursor-pointer
 				border-white border-2 text-center select-none text-white mx-1 bg-[#f9bb28]
-				hover:bg-gray-800 min-w-[50px] w-auto "
+				hover:bg-gray-800 min-w-[50px] w-auto"
 				onClick = "AddRelatedDrinks"
 			>Add</div>
 		</div>
