--- a/views/user/passwordForm.ejs
+++ b/views/user/passwordForm.ejs
@@ -30,7 +30,7 @@
                     <h2 class = "font-bold">Error: </h2>
                     <ul>
                     <% error.forEach(err => { %> 
-                        <li class = ""><span><%= err.param %>: </span><%= err.msg %></li>
+                        <li class = ""><%= err.msg %></li>
                     <%}) %> 
                     </ul>
                   </div>
@@ -51,12 +51,12 @@
                     [&>div>input]:placeholder:text-base" 
                     id = "form">
                     <div>
-                        <label for = "oldPassword">Old password</label>
+                        <label for = "current_password">Current password</label>
                         <input 
-                            name = "oldPassword" 
-                            id = "oldPasswordInput"
+                            name = "current_password" 
+                            id = "current_passwordInput"
                             type = "password"
-                            placeholder = "Type your old password here" 
+                            placeholder = "Type your current password here" 
                             class = ""
                             value = "<%= typeof password != 'undefined' ? password : null %>"
                             />
