--- a/views/user/profilePicDisplay.ejs
+++ b/views/user/profilePicDisplay.ejs
@@ -7,6 +7,7 @@ id = "AvatarField">
 			<img 
 				src="data:<%= userDetail.profile_pic.contentType %>;base64,<%= userDetail.profile_pic.data.toString('base64') %>"
 				class = "<%= ProfilePicStyle %>"
+				alt="Profile Picture"
 				/>
 		<%} else {%>
 			<div 
