--- a/views/user/userForm.ejs
+++ b/views/user/userForm.ejs
@@ -25,7 +25,7 @@
             <%- include("../partials/header") %>
             <%- include("../partials/MobileMenu") %>
           </div>
-          <div class = "w-11/12 mx-auto sm:w-5/12 ">
+          <div class = "w-11/12 mx-auto sm:w-10/12 md:w-7/12 lg:w-5/12">
               <% if(typeof error != 'undefined' && typeof error.errors != 'undefined') {%> 
                   <div 
                     id="ErrorDiv"
