Made the appearance of the front page better.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,10 +5,11 @@
   <title>Henry's Speakeasy</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel ="stylesheet" href='/stylesheets/style.css'> 
+  <link rel ="stylesheet" href='/stylesheets/tailwind.css'> 
   <link rel="icon" type="image/x-icon" href="/assets/images/SpeakeasyFavicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
 </head>
-<body class = "bg-[#555150] h-auto">
+<body class = "bg-[#555150] h-auto ArtDecoBackground ">
   <div 
   id="container"
   class = "w-full flex flex-col relative grow min-h-[120vh] font-['DecoTech'] text-[#f2e796]">
