--- a/public/stylesheets/tailwind.css
+++ b/public/stylesheets/tailwind.css
@@ -299,7 +299,7 @@
 
 .scene2 {
     z-index: -1;
-    -webkit-mask-image: linear-gradient( to right, transparent 47.5%, #fff 52.5% );
+    -webkit-mask-image: linear-gradient( to right, transparent 47.5%, #fff 52.5%);
     -webkit-mask-size: 210%;
     -webkit-mask-position: left;
 }
@@ -314,4 +314,19 @@
 
 .ContentWrapper {
     padding-bottom:32.5rem;
+}
+
+.ArtDecoBackground {
+
+}
+
+.ArtDecoBackground::after {
+    background: linear-gradient(to bottom, #555150, 80%, transparent), url('../assets/images/art-deco-background.png') center center fixed;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    content: "";
+    position: fixed;
+    top: 0;
+    left: 0;
 }
